feat: create /me endpoint to get self info
